# feedcache

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  TODO.md  changelog.txt  feedcache-help.md  hatch_build.py  pyproject.toml  requirements.dev.txt
.github/workflows/: publish-release.yml  unittests.yml
feedcache/: __main__.py  common.py  constants.py  curl_dl.py  feedcache.py  filediff.py  requests_dl.py  verify.py
feedcache/test/: __init__.py  __main__.py  test_00_smoketest.py  test_errors.py  test_feedcache.py
feedcache/test/data/: __init__.py  rss.py
