[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feedcache" # hatchling uses this to discover the top level dir
description = "Cache slow RSS feeds as static files"
dynamic = ["version", "readme" ]
dependencies = [
]
requires-python=">=3.8"
authors= [
    { name="Thomas Johler", email="python@johler.de" }
]

[project.optional-dependencies]
requests = [ "requests" ]

[project.scripts]
feedcache = "feedcache.__main__:main"

[project.urls]
Repository = "https://github.com/Herrminator/feedcache.git"

[tool.setuptools.dynamic]
version = {attr = "feedcache.constants.__version__"}

[tool.hatch.version]
path = "feedcache/constants.py"

[tool.hatch.build]

[tool.hatch.metadata.hooks.custom]
